--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -82,6 +82,8 @@ on charger
     write /sys/class/leds/white/brightness 255
 
 on property:sys.boot_completed=1
+    rm /data/unencrypted/zram_swap
+
     # Enable ZRAM on boot_complete
     swapon_all /vendor/etc/fstab.zram
 
